--- a/exp_link.html
+++ b/exp_link.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experiment Links</title>
-        <style>
+    <style>
         body {
             font-family: Arial, sans-serif;
             padding: 20px;
             background-color: #f4f4f9;
         }
+
         h1 {
             text-align: center;
         }
+
         .link-container {
             display: flex;
             flex-direction: column;
             align-items: center;
             margin-top: 20px;
         }
+
         .link-container a {
             text-decoration: none;
             background-color: #4CAF50;
@@ -28,9 +31,19 @@
             border-radius: 4px;
             font-size: 16px;
             transition: background-color 0.3s ease;
+            display: inline-block; /* Prevent line break between icon and text */
         }
+
         .link-container a:hover {
             background-color: #45a049;
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 400px) {
+            .link-container a {
+                font-size: 14px; /* Smaller font on smaller screens */
+                padding: 8px 16px; /* Smaller padding */
+            }
         }
     </style>
 </head>
