--- a/id_entry.html
+++ b/id_entry.html
@@ -5,10 +5,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Participant ID Entry</title>
     <style>
-        /* ... (your CSS styles) ... */
+        body {
+            font-family: Arial, sans-serif;
+            padding: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+        }
+        .container {
+            max-width: 400px;
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        input {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        button {
+            width: 100%;
+            padding: 10px;
+            background-color: #E03A3E; /* Red */
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        button:hover {
+            background-color: #C0292D; /* Darker red on hover */
+        }
+        .error {
+            color: red;
+            text-align: center;
+            margin-top: 10px;
+        }
+        footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background-color: #f0f0f0;
+            padding: 10px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .footer-left, .footer-right {
+            text-align: center;
+        }
+        .footer-left img, .footer-right img {
+            max-width: 100px;
+            height: auto;
+            display: block;
+            margin: 0 auto 5px;
+        }
+        @media (max-width: 600px) {
+            footer {
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+            }
+            .footer-left, .footer-right {
+              margin-bottom: 10px;
+            }
+        }
     </style>
 </head>
 <body>
+
     <div class="container">
         <h1>Enter Participant ID</h1>
         <input type="text" id="participant-id" placeholder="Enter Participant ID (e.g., AB123)" pattern="[a-zA-Z]{2}[0-9]{3}" required>
@@ -17,36 +93,42 @@
     </div>
 
     <script>
-        // Browser Check (Chrome) - Stricter Version
         if (!navigator.userAgent.includes('Chrome')) {
             alert("Please use Google Chrome to access this page.");
-            window.location.href = "chrome_required.html"; // Redirect to the Chrome required page
-            throw new Error("Chrome Required"); // Stop further script execution
+            window.location.href = "chrome_required.html";
+            throw new Error("Chrome Required");
         }
 
         function redirectToExperiment() {
             const participantID = document.getElementById('participant-id').value;
-
-            // Validate ID format (2 letters followed by 3 numbers)
             const regex = /^[a-zA-Z]{2}[0-9]{3}$/;
             if (!regex.test(participantID)) {
                 document.getElementById('error-message').style.display = 'block';
-                return; // Stop if ID is invalid
+                return;
             }
 
-            if (participantID) { // Check if ID is not empty
-                localStorage.setItem('participantId', participantID); // Store ID in localStorage
-                window.location.href = "exp_link.html"; // Redirect to experiment page
+            if (participantID) {
+                localStorage.setItem('participantId', participantID);
+                window.location.href = "exp_link.html";
             } else {
-                document.getElementById('error-message').style.display = 'block'; // Show error if ID is empty
+                document.getElementById('error-message').style.display = 'block';
             }
         }
 
-        // Hide error message when user types
         document.getElementById('participant-id').addEventListener('input', () => {
             document.getElementById('error-message').style.display = 'none';
         });
     </script>
-
+    <footer>
+        <div class="footer-left">
+            <img src="university_of_maryland_logo.png" alt="University of Maryland Logo"> <br>
+            University of Maryland<br>
+            College Park
+        </div>
+        <div class="footer-right">
+            <img src="aphasia_research_center_logo.png" alt="Aphasia Research Center Logo"> <br>
+            Aphasia Research Center
+        </div>
+    </footer>
 </body>
 </html>
