--- a/id_entry.html
+++ b/id_entry.html
@@ -17,7 +17,7 @@
         .container {
             max-width: 400px;
             padding: 20px;
-            background-color: white;
+            background-color: #f4f4f9; /* Light gray background for the container */
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
