--- a/id_entry.html
+++ b/id_entry.html
@@ -65,6 +65,13 @@
         .footer-left, .footer-right {
             text-align: center;
         }
+
+        .footer-right {
+            margin-right: 20px; /* Adjust this value as needed */
+            /* OR */
+            /* padding-right: 20px; Adjust this value as needed */
+        }
+
         .footer-left img, .footer-right img {
             max-width: 100px;
             height: auto;
