--- a/exp_link.html
+++ b/exp_link.html
@@ -58,11 +58,14 @@
             background-color: #f0f0f0;
             padding: 10px;
             display: flex;
-            justify-content: space-between;
+            justify-content: space-between; /* Important for spacing */
             align-items: center;
         }
         .footer-left, .footer-right {
             text-align: center;
+        }
+        .footer-right {
+            margin-right: 30px; /* Consistent margin with id_entry.html */
         }
         .footer-left img, .footer-right img {
             max-width: 100px;
