--- a/exp_link.html
+++ b/exp_link.html
@@ -5,84 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experiment Links</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-        }
-        h1 {
-            text-align: center;
-        }
-        .link-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-top: 20px;
-        }
-        .link-container a {
-            text-decoration: none;
-            background-color: #E03A3E; /* Red */
-            color: white;
-            padding: 10px 20px;
-            margin: 10px;
-            border-radius: 4px;
-            font-size: 16px;
-            transition: background-color 0.3s ease;
-            display: inline-block;
-        }
-        .link-container a:hover {
-            background-color: #C0292D; /* Darker red on hover */
-        }
-        @media (max-width: 400px) {
-            .link-container a {
-                font-size: 14px;
-                padding: 8px 16px;
-            }
-        }
-        .header {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .header h1 {
-            font-size: 2em;
-            margin-bottom: 10px;
-        }
-        .header p {
-            font-style: italic;
-            color: #777;
-        }
-        footer {
-            position: fixed;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-            background-color: #f0f0f0;
-            padding: 10px;
-            display: flex;
-            justify-content: space-between; /* Important for spacing */
-            align-items: center;
-        }
-        .footer-left, .footer-right {
-            text-align: center;
-        }
-        .footer-right {
-            margin-right: 30px; /* Consistent margin with id_entry.html */
-        }
-        .footer-left img, .footer-right img {
-            max-width: 100px;
-            height: auto;
-            display: block;
-            margin: 0 auto 5px;
-        }
-        @media (max-width: 600px) {
-            footer {
-                flex-direction: column;
-                align-items: center;
-                text-align: center;
-            }
-            .footer-left, .footer-right {
-                margin-bottom: 10px;
-            }
-        }
+        /* ... (your CSS styles remain the same) ... */
     </style>
 </head>
 <body>
@@ -112,20 +35,19 @@
             linkContainer.id = 'experimentLinks';
             document.body.appendChild(linkContainer);
 
-            // Add experiment links dynamically (example)
+            // Add experiment links dynamically
             const experimentLinksDiv = document.getElementById('experimentLinks');
 
             // URL encode the stored ID
             const encodedId = encodeURIComponent(storedId);
 
-            // Processing Speed Experiment Link
+            // Processing Speed Experiment Link (Corrected URL format)
             const processingSpeedLink = document.createElement('a');
-            processingSpeedLink.href = `https://farm.pcibex.net/r/ZszkxV/experiment.html?participantID=${encodedId}`;
+            processingSpeedLink.href = `https://farm.pcibex.net/r/ZszkxV/experiment.html?id=${encodedId}`; // Correct format: ?id=value
             processingSpeedLink.textContent = "Processing Speed Experiment";
             experimentLinksDiv.appendChild(processingSpeedLink);
 
-            // Add more links as needed (following the same pattern)
-            // Example:
+            // Example: Add more links as needed (following the same pattern)
             const link2 = document.createElement('a');
             link2.href = "your_experiment_link_2.html"; // Replace with your actual link
             link2.textContent = "Experiment 2";
@@ -145,9 +67,6 @@
                 link.textContent = exp.text;
                 experimentLinksDiv.appendChild(link);
             });
-
-
-
         }
     </script>
 
