--- a/exp_link.html
+++ b/exp_link.html
@@ -58,7 +58,7 @@
             background-color: #f0f0f0;
             padding: 10px;
             display: flex;
-            justify-content: space-between; /* This was missing! */
+            justify-content: space-between; /* Important for spacing */
             align-items: center;
         }
         .footer-left, .footer-right {
