--- a/exp_link.html
+++ b/exp_link.html
@@ -88,10 +88,7 @@
         }
     </style>
 </head>
-<body>
-
-    
-    <script>
+<body> <script>
         if (typeof window.chrome === 'undefined') {
             alert("Please use Google Chrome to access this page.");
             window.location.href = "chrome_required.html";
