--- a/exp_link.html
+++ b/exp_link.html
@@ -89,7 +89,7 @@
     </style>
 </head>
 <body> <script>
-        if (typeof window.chrome === 'undefined') {
+        if (typeof window.chrome === 'undefined' || navigator.userAgent.includes('Edg')) {
             alert("Please use Google Chrome to access this page.");
             window.location.href = "chrome_required.html";
             throw new Error("Chrome Required");
