--- a/exp_link.html
+++ b/exp_link.html
@@ -225,7 +225,7 @@
             
             // Processing Speed Experiment Link (Corrected URL format)
             const processingSpeedLink = document.createElement('a');
-            const processingSpeedUrl = "https://farm.pcibex.net/r/ZszkxV/experiment.html"; // Your PCIbex URL
+            const processingSpeedUrl = "https://farm.pcibex.net/r/MXZpZW/experiment.html?test=true"; // Your PCIbex URL
             processingSpeedLink.href = `redirect.html?experiment=${encodeURIComponent(processingSpeedUrl)}`;
             processingSpeedLink.textContent = "Processing Speed Experiment";
             processingSpeedLink.target = "_blank"; // Correct placement: set target of processingSpeedLink
